--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS System</title>
+    <title>Aindu CSS System</title>
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <div class="app-container">
-      <h1 class="text-al-center">CSS System</h1>
+      <h1 class="text-al-center">Aindu CSS System</h1>
       <section>
         <h2>Color System</h2>
         <div class="color-display-container">
