Adding ellipsis example and class. Adding grid files and example

--- a/index.html
+++ b/index.html
@@ -118,6 +118,35 @@
             <span class="tag charcoal-bc white-tc">capitalize-text</span>
           </p>
         </div>
+        <div class="text-container text-al-center">
+          <h4 class="ellipsis-text">
+            Elipssis: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Nesciunt qui eum eos officiis distinctio iusto saepe at, natus illo
+            dicta unde numquam incidunt exercitationem officia pariatur eligendi
+            doloremque maiores optio.
+          </h4>
+          <p>
+            <span class="tag charcoal-bc white-tc">ellipsis-text</span>
+          </p>
+        </div>
+      </section>
+      <section>
+        <h2>Layout System</h2>
+        <h3>Grid</h3>
+        <div class="grid box">
+          <div class="box item"></div>
+          <div class="box item"></div>
+          <div class="box item"></div>
+          <div class="box item"></div>
+          <div class="box item"></div>
+          <div class="box item"></div>
+          <div class="box item"></div>
+          <div class="box item"></div>
+          <div class="box item"></div>
+          <div class="box item"></div>
+          <div class="box item"></div>
+          <div class="box item"></div>
+        </div>
       </section>
     </div>
   </body>
