--- a/index.html
+++ b/index.html
@@ -10,54 +10,61 @@
   <body>
     <div class="app-container">
       <h1 class="text-al-center">Aindu CSS System</h1>
-      <section>
-        <h2>Color System</h2>
-        <div class="color-display-container">
+      <section class="row">
+        <h2 class="col-12">Color System</h2>
+        <p class="col-12">
+          I provide you a color system by default, you can see available colors
+          and classes on the graphic bellow.
+        </p>
+        <div class="col-4 color-display-container text-al-center">
           <h3>Colors:</h3>
-          <div class="charcoal-bc white-tc"><p>Charcoal</p></div>
-          <div class="persian-green-bc white-tc"><p>Persian Green</p></div>
-          <div class="orange-yellow-crayola-bc white-tc">
+          <div class="fst-bc white-tc bold-text"><p>Charcoal</p></div>
+          <div class="snd-bc white-tc bold-text"><p>Persian Green</p></div>
+          <div class="trd-bc white-tc bold-text">
             <p>Orange Yellow Crayola</p>
           </div>
-          <div class="sandy-brown-bc white-tc"><p>Sandy Brown</p></div>
-          <div class="burnt-sienna-bc white-tc"><p>Burnt Sienna</p></div>
-          <div class="black-bc white-tc"><p>Black</p></div>
-          <div class="white-bc"><p>White</p></div>
+          <div class="fth-bc white-tc bold-text"><p>Sandy Brown</p></div>
+          <div class="fifth-bc white-tc bold-text"><p>Burnt Sienna</p></div>
+          <div class="black-bc white-tc bold-text"><p>Black</p></div>
+          <div class="white-bc bold-text"><p>White</p></div>
         </div>
-        <div class="color-display-container">
+        <div class="col-4 color-display-container text-al-center">
           <h3>Background Colors:</h3>
-          <div class="charcoal-bc white-tc"><p>charcoal-bc</p></div>
-          <div class="persian-green-bc white-tc"><p>persian-green-bc</p></div>
-          <div class="orange-yellow-crayola-bc white-tc">
-            <p>orange-yellow-crayola-bc</p>
+          <div class="fst-bc white-tc bold-text"><p>fst-bc</p></div>
+          <div class="snd-bc white-tc bold-text"><p>snd-bc</p></div>
+          <div class="trd-bc white-tc bold-text">
+            <p>trd-bc</p>
           </div>
-          <div class="sandy-brown-bc white-tc">
-            <p>sandy-brown-bc white-bc</p>
+          <div class="fth-bc white-tc bold-text">
+            <p>fth-bc</p>
           </div>
-          <div class="burnt-sienna-bc white-tc"><p>burnt-sienna-bc</p></div>
-          <div class="black-bc white-tc"><p>black-bc</p></div>
-          <div class="white-bc"><p>white-bc</p></div>
+          <div class="fifth-bc white-tc bold-text"><p>fifth-bc</p></div>
+          <div class="black-bc white-tc bold-text"><p>black-bc</p></div>
+          <div class="white-bc bold-text"><p>white-bc</p></div>
         </div>
-        <div class="color-display-container">
+        <div class="col-4 color-display-container text-al-center">
           <h3>Text Colors:</h3>
-          <div class="charcoal-tc"><p>charcoal-tc</p></div>
-          <div class="persian-green-tc"><p>persian-green-tc</p></div>
-          <div class="orange-yellow-crayola-tc">
-            <p>orange-yellow-crayola-tc</p>
+          <div class="fst-tc bold-text"><p>fst-bc</p></div>
+          <div class="snd-tc bold-text"><p>snd-bc</p></div>
+          <div class="trd-tc bold-text">
+            <p>trd-bc</p>
           </div>
-          <div class="sandy-brown-tc"><p>sandy-brown-tc</p></div>
-          <div class="burnt-sienna-tc"><p>burnt-sienna-tc</p></div>
-          <div class="black-tc"><p>black-tc</p></div>
-          <div class="white-tc black-bc"><p>white-tc</p></div>
+          <div class="fth-tc bold-text"><p>fth-bc</p></div>
+          <div class="fifth-tc bold-text"><p>fifth-bc</p></div>
+          <div class="black-tc bold-text"><p>black-tc</p></div>
+          <div class="white-tc black-bc bold-text"><p>white-tc</p></div>
         </div>
       </section>
-      <section>
-        <h2>Text System</h2>
-        <h3 class="text-al-center">Text Alligment</h3>
-        <div class="text-container text-al-left">
-          <h4>
-            Left <span class="tag charcoal-bc white-tc">text-al-left</span>
-          </h4>
+      <section class="row">
+        <h2 class="col-12">Text System</h2>
+        <p class="col-12">
+          You can see all the clasess availables to change text format on your
+          html. In the next sections you can see format for alligment and
+          transformations.
+        </p>
+        <h3 class="col-12 text-al-center">Text Alligment</h3>
+        <div class="col-4 text-container text-al-left">
+          <h4>Left <span class="tag fst-bc white-tc">text-al-left</span></h4>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
             iusto incidunt, animi ducimus nam, ratione dignissimos beatae aut
@@ -65,9 +72,9 @@
             enim, voluptatum culpa corrupti!
           </p>
         </div>
-        <div class="text-container text-al-center">
+        <div class="col-4 text-container text-al-center">
           <h4>
-            Center <span class="tag charcoal-bc white-tc">text-al-center</span>
+            Center <span class="tag fst-bc white-tc">text-al-center</span>
           </h4>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
@@ -76,10 +83,8 @@
             perspiciatis expedita reprehenderit possimus eum?
           </p>
         </div>
-        <div class="text-container text-al-right">
-          <h4>
-            Right <span class="tag charcoal-bc white-tc">text-al-right</span>
-          </h4>
+        <div class="col-4 text-container text-al-right">
+          <h4>Right <span class="tag fst-bc white-tc">text-al-right</span></h4>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae,
             id fugit dolorum cupiditate optio quaerat corporis et explicabo,
@@ -87,38 +92,38 @@
             consequuntur aperiam magni assumenda ipsam.
           </p>
         </div>
-        <h3 class="text-al-center">Text Transformations</h3>
-        <div class="text-container text-al-center">
+        <h3 class="col-12 text-al-center">Text Transformations</h3>
+        <div class="col-4 text-container text-al-center">
           <h4 class="bold-text">Bold</h4>
           <p>
-            <span class="tag charcoal-bc white-tc">bold-text</span>
+            <span class="tag fst-bc white-tc">bold-text</span>
           </p>
         </div>
-        <div class="text-container text-al-center">
+        <div class="col-4 text-container text-al-center">
           <h4 class="italic-text">Italic</h4>
           <p>
-            <span class="tag charcoal-bc white-tc">italic-text</span>
+            <span class="tag fst-bc white-tc">italic-text</span>
           </p>
         </div>
-        <div class="text-container text-al-center">
+        <div class="col-4 text-container text-al-center">
           <h4 class="underline-text">Underline</h4>
           <p>
-            <span class="tag charcoal-bc white-tc">underline-text</span>
+            <span class="tag fst-bc white-tc">underline-text</span>
           </p>
         </div>
-        <div class="text-container text-al-center">
+        <div class="col-4 text-container text-al-center">
           <h4 class="uppercase-text">Uppercase</h4>
           <p>
-            <span class="tag charcoal-bc white-tc">uppercase-text</span>
+            <span class="tag fst-bc white-tc">uppercase-text</span>
           </p>
         </div>
-        <div class="text-container text-al-center">
+        <div class="col-4 text-container text-al-center">
           <h4 class="capitalize-text">capitalize</h4>
           <p>
-            <span class="tag charcoal-bc white-tc">capitalize-text</span>
+            <span class="tag fst-bc white-tc">capitalize-text</span>
           </p>
         </div>
-        <div class="text-container text-al-center">
+        <div class="col-4 text-container text-al-center">
           <h4 class="ellipsis-text">
             Elipssis: Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Nesciunt qui eum eos officiis distinctio iusto saepe at, natus illo
@@ -126,26 +131,83 @@
             doloremque maiores optio.
           </h4>
           <p>
-            <span class="tag charcoal-bc white-tc">ellipsis-text</span>
+            <span class="tag fst-bc white-tc">ellipsis-text</span>
           </p>
         </div>
       </section>
-      <section>
-        <h2>Layout System</h2>
-        <h3>Grid</h3>
-        <div class="grid box">
-          <div class="box item"></div>
-          <div class="box item"></div>
-          <div class="box item"></div>
-          <div class="box item"></div>
-          <div class="box item"></div>
-          <div class="box item"></div>
-          <div class="box item"></div>
-          <div class="box item"></div>
-          <div class="box item"></div>
-          <div class="box item"></div>
-          <div class="box item"></div>
-          <div class="box item"></div>
+      <section class="row">
+        <h2 class="col-12">Layout System</h2>
+        <p class="col-12">
+          Layout System is a easy and fast way to implements responsive grid in
+          your project.
+        </p>
+        <h3 class="col-12">Row</h3>
+        <p class="col-12">
+          The row class have 12 column by default and a max-width size of
+          1200px.
+        </p>
+        <p class="col-12">
+          This class was implemented with CSS Grid and it's responsive.
+        </p>
+        <div class="row col-12 box text-al-center">
+          <div class="col-1 box item text-al-vertical">col-1</div>
+          <div class="col-1 box item">col-1</div>
+          <div class="col-1 box item">col-1</div>
+          <div class="col-1 box item">col-1</div>
+          <div class="col-1 box item">col-1</div>
+          <div class="col-1 box item">col-1</div>
+          <div class="col-1 box item">col-1</div>
+          <div class="col-1 box item">col-1</div>
+          <div class="col-1 box item">col-1</div>
+          <div class="col-1 box item">col-1</div>
+          <div class="col-1 box item">col-1</div>
+          <div class="col-1 box item">col-1</div>
+        </div>
+        <h3 class="col-12">Column</h3>
+        <p class="col-12">
+          The column class is defined with an span value, to use n spaces from 1
+          to 12. By default if you use col, only use 1 space.
+        </p>
+        <div class="row col-12 box text-al-center">
+          <div class="col box item">col</div>
+          <div class="col box item">col</div>
+          <div class="col box item">col</div>
+          <div class="col box item">col</div>
+          <div class="col-8 box item">col-8</div>
+        </div>
+        <div class="row col-12 box text-al-center">
+          <div class="col-3 box item">col-3</div>
+          <div class="col-3 box item">col-3</div>
+          <div class="col-3 box item">col-3</div>
+          <div class="col-3 box item">col-3</div>
+        </div>
+        <div class="row col-12 box text-al-center">
+          <div class="col-12 box item">col-3</div>
+        </div>
+        <h3 class="col-12">No Gutter and no Margin</h3>
+        <p class="col-12">
+          If you want remove in all row the gutter you can use the class
+          <span class="tag">--no-gutter</span>
+        </p>
+        <div class="col-12 row --no-gutter box text-al-center">
+          <div class="col-3 box item">col-3</div>
+          <div class="col-3 box item">col-3</div>
+          <div class="col-3 box item">col-3</div>
+          <div class="col-3 box item">col-3</div>
+          <div class="col-12 box item">col-3</div>
+        </div>
+        <p class="col-12">
+          If you want remove margin between rows you can use the class
+          <span class="tag">--no-margin</span>
+        </p>
+        <div class="col-12 row --no-margin box text-al-center">
+          <div class="col-3 box item">col-3</div>
+          <div class="col-3 box item">col-3</div>
+          <div class="col-3 box item">col-3</div>
+          <div class="col-3 box item">col-3</div>
+        </div>
+        <div class="col-12 row --no-margin box text-al-center">
+          <div class="col-12 box item">col-3</div>
         </div>
       </section>
     </div>
