Solve some problemw with grid and fix examples

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <div class="app-container">
       <h1 class="text-al-center">Aindu CSS System</h1>
       <section class="row">
-        <h2 class="col-12">Color System</h2>
-        <p class="col-12">
+        <h2 class="col -sm-12">Color System</h2>
+        <p class="col -sm-12">
           I provide you a color system by default, you can see available colors
           and classes on the graphic bellow.
         </p>
-        <div class="col-4 color-display-container text-al-center">
+        <div
+          class="col -sm-12 -md-4 -lg-4 color-display-container text-al-center"
+        >
           <h3>Colors:</h3>
           <div class="fst-bc white-tc bold-text"><p>Charcoal</p></div>
           <div class="snd-bc white-tc bold-text"><p>Persian Green</p></div>
@@ -28,7 +30,9 @@
           <div class="black-bc white-tc bold-text"><p>Black</p></div>
           <div class="white-bc bold-text"><p>White</p></div>
         </div>
-        <div class="col-4 color-display-container text-al-center">
+        <div
+          class="col -sm-12 -md-4 -lg-4 color-display-container text-al-center"
+        >
           <h3>Background Colors:</h3>
           <div class="fst-bc white-tc bold-text"><p>fst-bc</p></div>
           <div class="snd-bc white-tc bold-text"><p>snd-bc</p></div>
@@ -42,7 +46,9 @@
           <div class="black-bc white-tc bold-text"><p>black-bc</p></div>
           <div class="white-bc bold-text"><p>white-bc</p></div>
         </div>
-        <div class="col-4 color-display-container text-al-center">
+        <div
+          class="col -sm-12 -md-4 -lg-4 color-display-container text-al-center"
+        >
           <h3>Text Colors:</h3>
           <div class="fst-tc bold-text"><p>fst-bc</p></div>
           <div class="snd-tc bold-text"><p>snd-bc</p></div>
@@ -56,158 +62,167 @@
         </div>
       </section>
       <section class="row">
-        <h2 class="col-12">Text System</h2>
-        <p class="col-12">
+        <h2 class="col -sm-12">Text System</h2>
+        <p class="col -sm-12">
           You can see all the clasess availables to change text format on your
           html. In the next sections you can see format for alligment and
           transformations.
         </p>
-        <h3 class="col-12 text-al-center">Text Alligment</h3>
-        <div class="col-4 text-container text-al-left">
-          <h4>Left <span class="tag fst-bc white-tc">text-al-left</span></h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-            iusto incidunt, animi ducimus nam, ratione dignissimos beatae aut
-            voluptate distinctio dolorum qui impedit quidem aliquam quibusdam
-            enim, voluptatum culpa corrupti!
-          </p>
+        <h3 class="col -sm-12 text-al-center">Text Alligment</h3>
+        <div class="col -sm-12 -md-4 -lg-4 text-container text-al-left">
+          <div>
+            <h4>Left <span class="tag fst-bc white-tc">text-al-left</span></h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+              iusto incidunt, animi ducimus nam, ratione dignissimos beatae aut
+              voluptate distinctio dolorum qui impedit quidem aliquam quibusdam
+              enim, voluptatum culpa corrupti!
+            </p>
+          </div>
         </div>
-        <div class="col-4 text-container text-al-center">
-          <h4>
-            Center <span class="tag fst-bc white-tc">text-al-center</span>
-          </h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
-            veritatis aut reiciendis, iusto excepturi, maxime ducimus molestias
-            rem assumenda quis temporibus. Pariatur eveniet suscipit libero,
-            perspiciatis expedita reprehenderit possimus eum?
-          </p>
+        <div class="col -sm-12 -md-4 -lg-4 text-container text-al-center">
+          <div>
+            <h4>
+              Center <span class="tag fst-bc white-tc">text-al-center</span>
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+              veritatis aut reiciendis, iusto excepturi, maxime ducimus
+              molestias rem assumenda quis temporibus. Pariatur eveniet suscipit
+              libero, perspiciatis expedita reprehenderit possimus eum?
+            </p>
+          </div>
         </div>
-        <div class="col-4 text-container text-al-right">
-          <h4>Right <span class="tag fst-bc white-tc">text-al-right</span></h4>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae,
-            id fugit dolorum cupiditate optio quaerat corporis et explicabo,
-            excepturi nisi suscipit blanditiis adipisci omnis sapiente
-            consequuntur aperiam magni assumenda ipsam.
-          </p>
+        <div class="col -sm-12 -md-4 -lg-4 text-container text-al-right">
+          <div>
+            <h4>
+              Right <span class="tag fst-bc white-tc">text-al-right</span>
+            </h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Molestiae, id fugit dolorum cupiditate optio quaerat corporis et
+              explicabo, excepturi nisi suscipit blanditiis adipisci omnis
+              sapiente consequuntur aperiam magni assumenda ipsam.
+            </p>
+          </div>
         </div>
-        <h3 class="col-12 text-al-center">Text Transformations</h3>
-        <div class="col-4 text-container text-al-center">
-          <h4 class="bold-text">Bold</h4>
-          <p>
-            <span class="tag fst-bc white-tc">bold-text</span>
-          </p>
+
+        <h3 class="col -sm-12 text-al-center">Text Transformations</h3>
+        <div class="col -sm-12 -md-4 -lg-4 text-container text-al-center">
+          <div>
+            <h4 class="bold-text">Bold</h4>
+            <p>
+              <span class="tag fst-bc white-tc">bold-text</span>
+            </p>
+          </div>
         </div>
-        <div class="col-4 text-container text-al-center">
-          <h4 class="italic-text">Italic</h4>
-          <p>
-            <span class="tag fst-bc white-tc">italic-text</span>
-          </p>
+
+        <div class="col -sm-12 -md-4 -lg-4 text-container text-al-center">
+          <div>
+            <h4 class="italic-text">Italic</h4>
+            <p>
+              <span class="tag fst-bc white-tc">italic-text</span>
+            </p>
+          </div>
         </div>
-        <div class="col-4 text-container text-al-center">
-          <h4 class="underline-text">Underline</h4>
-          <p>
-            <span class="tag fst-bc white-tc">underline-text</span>
-          </p>
+        <div class="col -sm-12 -md-4 -lg-4 text-container text-al-center">
+          <div>
+            <h4 class="underline-text">Underline</h4>
+            <p>
+              <span class="tag fst-bc white-tc">underline-text</span>
+            </p>
+          </div>
         </div>
-        <div class="col-4 text-container text-al-center">
-          <h4 class="uppercase-text">Uppercase</h4>
-          <p>
-            <span class="tag fst-bc white-tc">uppercase-text</span>
-          </p>
+        <div class="col -sm-12 -md-4 -lg-4 text-container text-al-center">
+          <div>
+            <h4 class="uppercase-text">Uppercase</h4>
+            <p>
+              <span class="tag fst-bc white-tc">uppercase-text</span>
+            </p>
+          </div>
         </div>
-        <div class="col-4 text-container text-al-center">
-          <h4 class="capitalize-text">capitalize</h4>
-          <p>
-            <span class="tag fst-bc white-tc">capitalize-text</span>
-          </p>
+        <div class="col -sm-12 -md-4 -lg-4 text-container text-al-center">
+          <div>
+            <h4 class="capitalize-text">capitalize</h4>
+            <p>
+              <span class="tag fst-bc white-tc">capitalize-text</span>
+            </p>
+          </div>
         </div>
-        <div class="col-4 text-container text-al-center">
-          <h4 class="ellipsis-text">
-            Elipssis: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Nesciunt qui eum eos officiis distinctio iusto saepe at, natus illo
-            dicta unde numquam incidunt exercitationem officia pariatur eligendi
-            doloremque maiores optio.
-          </h4>
-          <p>
-            <span class="tag fst-bc white-tc">ellipsis-text</span>
-          </p>
+        <div class="col -sm-12 -md-4 -lg-4 text-container text-al-center">
+          <div>
+            <h4 class="ellipsis-text">
+              Elipssis: Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Nesciunt qui eum eos officiis distinctio iusto saepe at, natus
+              illo dicta unde numquam incidunt exercitationem officia pariatur
+              eligendi doloremque maiores optio.
+            </h4>
+            <p>
+              <span class="tag fst-bc white-tc">ellipsis-text</span>
+            </p>
+          </div>
         </div>
       </section>
-      <section class="row">
-        <h2 class="col-12">Layout System</h2>
-        <p class="col-12">
-          Layout System is a easy and fast way to implements responsive grid in
-          your project.
+      <section>
+        <h2>Layout System</h2>
+        <h3>Row</h3>
+        <p>
+          How you can see on this example of a row, any row of the grid system
+          has 12 columns in three screen sizes (sm, md and lg), you can decide
+          how many spaces of the twelve available you want to use in any column
+          on of the three screen sizes.
         </p>
-        <h3 class="col-12">Row</h3>
-        <p class="col-12">
-          The row class have 12 column by default and a max-width size of
-          1200px.
+        <p>
+          In this example I use for big and middle screens sizes 1 space for
+          every column, but for small screens I choose 2 space for every column.
+          As result the column class is
+          <span class="tag">col -sm-2 -md-1 -lg-1</span>.
         </p>
-        <p class="col-12">
-          This class was implemented with CSS Grid and it's responsive.
-        </p>
-        <div class="row col-12 box text-al-center">
-          <div class="col-1 box item text-al-vertical">col-1</div>
-          <div class="col-1 box item">col-1</div>
-          <div class="col-1 box item">col-1</div>
-          <div class="col-1 box item">col-1</div>
-          <div class="col-1 box item">col-1</div>
-          <div class="col-1 box item">col-1</div>
-          <div class="col-1 box item">col-1</div>
-          <div class="col-1 box item">col-1</div>
-          <div class="col-1 box item">col-1</div>
-          <div class="col-1 box item">col-1</div>
-          <div class="col-1 box item">col-1</div>
-          <div class="col-1 box item">col-1</div>
+        <div class="row text-al-center fst-bc">
+          <div class="col -sm-2 -md-1 -lg-1"><div class="box">1</div></div>
+          <div class="col -sm-2 -md-1 -lg-1"><div class="box">2</div></div>
+          <div class="col -sm-2 -md-1 -lg-1"><div class="box">3</div></div>
+          <div class="col -sm-2 -md-1 -lg-1"><div class="box">4</div></div>
+          <div class="col -sm-2 -md-1 -lg-1"><div class="box">5</div></div>
+          <div class="col -sm-2 -md-1 -lg-1"><div class="box">6</div></div>
+          <div class="col -sm-2 -md-1 -lg-1"><div class="box">7</div></div>
+          <div class="col -sm-2 -md-1 -lg-1"><div class="box">8</div></div>
+          <div class="col -sm-2 -md-1 -lg-1"><div class="box">9</div></div>
+          <div class="col -sm-2 -md-1 -lg-1"><div class="box">10</div></div>
+          <div class="col -sm-2 -md-1 -lg-1"><div class="box">11</div></div>
+          <div class="col -sm-2 -md-1 -lg-1"><div class="box">12</div></div>
         </div>
-        <h3 class="col-12">Column</h3>
-        <p class="col-12">
-          The column class is defined with an span value, to use n spaces from 1
-          to 12. By default if you use col, only use 1 space.
-        </p>
-        <div class="row col-12 box text-al-center">
-          <div class="col box item">col</div>
-          <div class="col box item">col</div>
-          <div class="col box item">col</div>
-          <div class="col box item">col</div>
-          <div class="col-8 box item">col-8</div>
+
+        <h3>Column</h3>
+        <div class="row text-al-center">
+          <div class="col -sm-4 -md-4 -lg-4">
+            <div class="box"> col-sm-4 -md-4 -lg-4</div>
+          </div>
+          <div class="col -sm-8 -md-8 -lg-8">
+            <div class="box">col -sm-8 -md-8 -lg-8</div>
+          </div>
         </div>
-        <div class="row col-12 box text-al-center">
-          <div class="col-3 box item">col-3</div>
-          <div class="col-3 box item">col-3</div>
-          <div class="col-3 box item">col-3</div>
-          <div class="col-3 box item">col-3</div>
+        <div class="row text-al-center">
+          <div class="col -sm-3"><div class="box">col -sm-3</div></div>
+          <div class="col -sm-3"><div class="box">col -sm-3</div></div>
+          <div class="col -sm-3"><div class="box">col -sm-3</div></div>
+          <div class="col -sm-3"><div class="box">col -sm-3</div></div>
         </div>
-        <div class="row col-12 box text-al-center">
-          <div class="col-12 box item">col-3</div>
+        <div class="row text-al-center">
+          <div class="col -sm-12 item"><div class="box">col -sm-12</div></div>
         </div>
-        <h3 class="col-12">No Gutter and no Margin</h3>
-        <p class="col-12">
+
+        <h3>No Gutter</h3>
+        <p class="col -sm-12">
           If you want remove in all row the gutter you can use the class
-          <span class="tag">--no-gutter</span>
+          <span class="tag">-no-gutter</span>
         </p>
-        <div class="col-12 row --no-gutter box text-al-center">
-          <div class="col-3 box item">col-3</div>
-          <div class="col-3 box item">col-3</div>
-          <div class="col-3 box item">col-3</div>
-          <div class="col-3 box item">col-3</div>
-          <div class="col-12 box item">col-3</div>
-        </div>
-        <p class="col-12">
-          If you want remove margin between rows you can use the class
-          <span class="tag">--no-margin</span>
-        </p>
-        <div class="col-12 row --no-margin box text-al-center">
-          <div class="col-3 box item">col-3</div>
-          <div class="col-3 box item">col-3</div>
-          <div class="col-3 box item">col-3</div>
-          <div class="col-3 box item">col-3</div>
-        </div>
-        <div class="col-12 row --no-margin box text-al-center">
-          <div class="col-12 box item">col-3</div>
+
+        <div class="row -no-gutter text-al-center">
+          <div class="col -sm-3"><div class="box">col -sm-3</div></div>
+          <div class="col -sm-3"><div class="box">col -sm-3</div></div>
+          <div class="col -sm-3"><div class="box">col -sm-3</div></div>
+          <div class="col -sm-3"><div class="box">col -sm-3</div></div>
         </div>
       </section>
     </div>
