--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <h3>Column</h3>
         <div class="row text-al-center">
           <div class="col -sm-4 -md-4 -lg-4">
-            <div class="box"> col-sm-4 -md-4 -lg-4</div>
+            <div class="box">col-sm-4 -md-4 -lg-4</div>
           </div>
           <div class="col -sm-8 -md-8 -lg-8">
             <div class="box">col -sm-8 -md-8 -lg-8</div>
@@ -223,6 +223,42 @@
           <div class="col -sm-3"><div class="box">col -sm-3</div></div>
           <div class="col -sm-3"><div class="box">col -sm-3</div></div>
           <div class="col -sm-3"><div class="box">col -sm-3</div></div>
+        </div>
+      </section>
+      <section>
+        <h2>Buttons</h2>
+        <h3>Sizes</h3>
+        <div class="row">
+          <div class="col -sm-4 -md-3 -lg-2">
+            <div class="button -sm">sm button</div>
+          </div>
+          <div class="col -sm-4 -md-3 -lg-2">
+            <div class="button -md">md button</div>
+          </div>
+          <div class="col -sm-4 -md-3 -lg-2">
+            <div class="button -lg">lg button</div>
+          </div>
+        </div>
+        <h3>Colors</h3>
+        <div class="row">
+          <div class="col -sm-4 -md-3 -lg-2">
+            <div class="button -sm fst">sm fst</div>
+          </div>
+          <div class="col -sm-4 -md-3 -lg-2">
+            <div class="button -sm snd">sm snd</div>
+          </div>
+          <div class="col -sm-4 -md-3 -lg-2">
+            <div class="button -sm trd">sm trd</div>
+          </div>
+          <div class="col -sm-4 -md-3 -lg-2">
+            <div class="button -sm fth">sm fth</div>
+          </div>
+          <div class="col -sm-4 -md-3 -lg-2">
+            <div class="button -sm fifth">sm fifth</div>
+          </div>
+          <div class="col -sm-4 -md-3 -lg-2">
+            <div class="button -sm black">sm black</div>
+          </div>
         </div>
       </section>
     </div>
