--- a/index.html
+++ b/index.html
@@ -230,13 +230,13 @@
         <h3>Sizes</h3>
         <div class="row">
           <div class="col -sm-4 -md-3 -lg-2">
-            <div class="button -sm">sm button</div>
+            <div class="button -sm">sm btn</div>
           </div>
           <div class="col -sm-4 -md-3 -lg-2">
-            <div class="button -md">md button</div>
+            <div class="button -md">md btn</div>
           </div>
           <div class="col -sm-4 -md-3 -lg-2">
-            <div class="button -lg">lg button</div>
+            <div class="button -lg">lg btn</div>
           </div>
         </div>
         <h3>Colors</h3>
@@ -258,6 +258,85 @@
           </div>
           <div class="col -sm-4 -md-3 -lg-2">
             <div class="button -sm black">sm black</div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h2>Form</h2>
+        <p>
+          I define a wrapper class for form items
+          <span class="tag">form-group</span> and some classes for the child. I
+          use the classes <span class="tag">form-control</span> and
+          <span class="tag">form-label</span> to have floating labels on form
+          items.
+        </p>
+        <h3>input</h3>
+        <div class="row">
+          <div class="col -sm-3 -md-3 -lg-2">
+            <div class="form-group">
+              <input
+                class="form-control"
+                name="input1"
+                id="input1"
+                type="text"
+              />
+              <label class="form-label" for="input1">label</label>
+            </div>
+          </div>
+          <div class="col -sm-3 -md-3 -lg-2">
+            <div class="form-group fst">
+              <input
+                class="form-control"
+                name="input2"
+                id="input2"
+                type="text"
+              />
+              <label class="form-label" for="input2">label</label>
+            </div>
+          </div>
+          <div class="col -sm-3 -md-3 -lg-2">
+            <div class="form-group snd">
+              <input
+                class="form-control"
+                name="input3"
+                id="input3"
+                type="text"
+              />
+              <label class="form-label" for="input3">label</label>
+            </div>
+          </div>
+          <div class="col -sm-3 -md-3 -lg-2">
+            <div class="form-group trd">
+              <input
+                class="form-control"
+                name="input4"
+                id="input4"
+                type="text"
+              />
+              <label class="form-label" for="input4">label</label>
+            </div>
+          </div>
+          <div class="col -sm-3 -md-3 -lg-2">
+            <div class="form-group fth">
+              <input
+                class="form-control"
+                name="input5"
+                id="input5"
+                type="text"
+              />
+              <label class="form-label" for="input5">label</label>
+            </div>
+          </div>
+          <div class="col -sm-3 -md-3 -lg-2">
+            <div class="form-group fifth">
+              <input
+                class="form-control"
+                name="input6"
+                id="input6"
+                type="text"
+              />
+              <label class="form-label" for="input6">label</label>
+            </div>
           </div>
         </div>
       </section>
