--- a/index.html
+++ b/index.html
@@ -274,38 +274,44 @@
         <div class="row">
           <div class="col -sm-4 -md-4 -lg-3">
             <div class="form-group -sm">
-              <input
-                name="inputS1"
-                id="inputS1"
-                type="text"
-                pattern="\S+.*"
-                required
-              />
-              <label for="inputS1">label</label>
+              <div class="form-group-item">
+                <input
+                  name="inputS1"
+                  id="inputS1"
+                  type="text"
+                  pattern="\S+.*"
+                  required
+                />
+                <label for="inputS1">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-4 -md-4 -lg-3">
             <div class="form-group -md">
-              <input
-                name="inputS2"
-                id="inputS2"
-                type="text"
-                pattern="\S+.*"
-                required
-              />
-              <label for="inputS2">label</label>
+              <div class="form-group-item">
+                <input
+                  name="inputS2"
+                  id="inputS2"
+                  type="text"
+                  pattern="\S+.*"
+                  required
+                />
+                <label for="inputS2">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-4 -md-4 -lg-3">
             <div class="form-group -lg">
-              <input
-                name="inputS3"
-                id="inputS3"
-                type="text"
-                pattern="\S+.*"
-                required
-              />
-              <label for="inputS3">label</label>
+              <div class="form-group-item">
+                <input
+                  name="inputS3"
+                  id="inputS3"
+                  type="text"
+                  pattern="\S+.*"
+                  required
+                />
+                <label for="inputS3">label</label>
+              </div>
             </div>
           </div>
         </div>
@@ -313,74 +319,86 @@
         <div class="row">
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group -sm">
-              <input
-                name="input1"
-                id="input1"
-                type="text"
-                pattern="\S+.*"
-                required
-              />
-              <label for="input1">label</label>
+              <div class="form-group-item">
+                <input
+                  name="input1"
+                  id="input1"
+                  type="text"
+                  pattern="\S+.*"
+                  required
+                />
+                <label for="input1">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group -sm fst">
-              <input
-                name="input2"
-                id="input2"
-                type="text"
-                pattern="\S+.*"
-                required
-              />
-              <label for="input2">label</label>
+              <div class="form-group-item">
+                <input
+                  name="input2"
+                  id="input2"
+                  type="text"
+                  pattern="\S+.*"
+                  required
+                />
+                <label for="input2">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group -sm snd">
-              <input
-                name="input3"
-                id="input3"
-                type="text"
-                pattern="\S+.*"
-                required
-              />
-              <label for="input3">label</label>
+              <div class="form-group-item">
+                <input
+                  name="input3"
+                  id="input3"
+                  type="text"
+                  pattern="\S+.*"
+                  required
+                />
+                <label for="input3">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group -sm trd">
-              <input
-                name="input4"
-                id="input4"
-                type="text"
-                pattern="\S+.*"
-                required
-              />
-              <label for="input4">label</label>
+              <div class="form-group-item">
+                <input
+                  name="input4"
+                  id="input4"
+                  type="text"
+                  pattern="\S+.*"
+                  required
+                />
+                <label for="input4">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group -sm fth">
-              <input
-                name="input5"
-                id="input5"
-                type="text"
-                pattern="\S+.*"
-                required
-              />
-              <label for="input5">label</label>
+              <div class="form-group-item">
+                <input
+                  name="input5"
+                  id="input5"
+                  type="text"
+                  pattern="\S+.*"
+                  required
+                />
+                <label for="input5">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group -sm fifth">
-              <input
-                name="input6"
-                id="input6"
-                type="text"
-                pattern="\S+.*"
-                required
-              />
-              <label for="input6">label</label>
+              <div class="form-group-item">
+                <input
+                  name="input6"
+                  id="input6"
+                  type="text"
+                  pattern="\S+.*"
+                  required
+                />
+                <label for="input6">label</label>
+              </div>
             </div>
           </div>
         </div>
@@ -389,38 +407,41 @@
         <div class="row">
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group -sm">
-              <textarea
-                name="textareaS1"
+              <div class="form-group-item ta">
+                <textarea
                 id="textareaS1"
-                rows="3"
-                pattern="\S+.*"
-                required
-              ></textarea>
-              <label for="textareaS1">label</label>
+                  name="textareaS1"
+                  pattern="\S+.*"
+                  required
+                ></textarea>
+                <label for="textareaS1">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group -md">
-              <textarea
-                name="textareaS2"
-                id="textareaS2"
-                rows="3"
-                pattern="\S+.*"
-                required
-              ></textarea>
-              <label for="textareaS2">label</label>
+              <div class="form-group-item">
+                <textarea
+                  name="textareaS2"
+                  id="textareaS2"
+                  pattern="\S+.*"
+                  required
+                ></textarea>
+                <label for="textareaS2">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group -lg">
-              <textarea
-                name="textareaS3"
-                id="textareaS3"
-                rows="3"
-                pattern="\S+.*"
-                required
-              ></textarea>
-              <label for="textareaS3">label</label>
+              <div class="form-group-item">
+                <textarea
+                  name="textareaS3"
+                  id="textareaS3"
+                  pattern="\S+.*"
+                  required
+                ></textarea>
+                <label for="textareaS3">label</label>
+              </div>
             </div>
           </div>
         </div>
@@ -428,74 +449,86 @@
         <div class="row">
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group -sm">
-              <textarea
-                name="textarea1"
-                id="textarea1"
-                rows="5"
-                pattern="\S+.*"
-                required
-              ></textarea>
-              <label for="textarea1">label</label>
+              <div class="form-group-item">
+                <textarea
+                  name="textarea1"
+                  id="textarea1"
+                  rows="5"
+                  pattern="\S+.*"
+                  required
+                ></textarea>
+                <label for="textarea1">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group fst -sm">
-              <textarea
-                name="textarea2"
-                id="textarea2"
-                rows="5"
-                pattern="\S+.*"
-                required
-              ></textarea>
-              <label for="textarea2">label</label>
+              <div class="form-group-item">
+                <textarea
+                  name="textarea2"
+                  id="textarea2"
+                  rows="5"
+                  pattern="\S+.*"
+                  required
+                ></textarea>
+                <label for="textarea2">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group snd -sm">
-              <textarea
-                name="textarea3"
-                id="textarea3"
-                rows="5"
-                pattern="\S+.*"
-                required
-              ></textarea>
-              <label for="textarea3">label</label>
+              <div class="form-group-item">
+                <textarea
+                  name="textarea3"
+                  id="textarea3"
+                  rows="5"
+                  pattern="\S+.*"
+                  required
+                ></textarea>
+                <label for="textarea3">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group trd -sm">
-              <textarea
-                name="textarea4"
-                id="textarea4"
-                rows="5"
-                pattern="\S+.*"
-                required
-              ></textarea>
-              <label for="textarea4">label</label>
+              <div class="form-group-item">
+                <textarea
+                  name="textarea4"
+                  id="textarea4"
+                  rows="5"
+                  pattern="\S+.*"
+                  required
+                ></textarea>
+                <label for="textarea4">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group fth -sm">
-              <textarea
-                name="textarea5"
-                id="textarea5"
-                rows="5"
-                pattern="\S+.*"
-                required
-              ></textarea>
-              <label for="textarea5">label</label>
+              <div class="form-group-item">
+                <textarea
+                  name="textarea5"
+                  id="textarea5"
+                  rows="5"
+                  pattern="\S+.*"
+                  required
+                ></textarea>
+                <label for="textarea5">label</label>
+              </div>
             </div>
           </div>
           <div class="col -sm-3 -md-3 -lg-2">
             <div class="form-group fifth -sm">
-              <textarea
-                name="textarea6"
-                id="textarea6"
-                rows="5"
-                pattern="\S+.*"
-                required
-              ></textarea>
-              <label for="textarea6">label</label>
+              <div class="form-group-item">
+                <textarea
+                  name="textarea6"
+                  id="textarea6"
+                  rows="5"
+                  pattern="\S+.*"
+                  required
+                ></textarea>
+                <label for="textarea6">label</label>
+              </div>
             </div>
           </div>
         </div> -->
